@@ -6,8 +6,11 @@
   * Added Mechanize::Download#body for compatibility with Mechanize::File when
     using Mechanize#get_file with Mechanize::Image or other Download-based
     pluggable parser.  Issue #202 by angas
-  * Applied max_file_buffer to the Content-Encoding handlers as well to
-    prevent extra Tempfiles for small gzip or deflate response
+  * Applied Mechanize#max_file_buffer to the Content-Encoding handlers as well
+    to prevent extra Tempfiles for small gzip or deflate response
+  * Increase default Mechanize#max_file_buffer to 100,000 bytes.  This gives
+    ~5MB of response bodies in memory with the default history setting of 50
+    pages.
 
 === 2.2.1 / 2012-02-13
 
